# challenges

./: README.md
bee/: Cargo.toml  README.md
bee/assets/: bee.xcf  flower.xcf  hive.xcf
bee/examples/: test.rs
bee/src/: lib.rs
