[package]
name = "advancedresearch-bee_challenge"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]

[lib]
name = "bee_challenge"

[dependencies]
advancedresearch-asi_core0 = "0.1.0"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
vecmath = "0.3.1"
interpolation = "0.1.0"
rand = "0.4.2"

[dev-dependencies]
pistoncore-sdl2_window = "0.49.1"
piston2d-opengl_graphics = "0.53.0"
